# claude-monitor

./: .gitignore  Cargo.toml  README.md
src/: config.rs  main.rs
src/api/: routes.rs
src/monitor/: mod.rs  state.rs  watcher.rs
src/parser/: history.rs  mod.rs  session.rs
src/web/: templates.rs
tray-app/src/: index.html
tray-app/src-tauri/: Cargo.toml  tauri.conf.json
tray-app/src-tauri/icons/: icon.icns
tray-app/src-tauri/src/: main.rs  parser.rs
